# To-do-App

./: .gitignore  CHANGELOG.md  HUGGINGFACE_DEPLOYMENT.md  IMPLEMENTATION-SUMMARY-P2-009.md  IMPLEMENTATION-SUMMARY-P2-010.md  PHASE2-VALIDATION-REPORT.md  RAILWAY_DEPLOYMENT.md  README.md  SESSION-SUMMARY-TG4.md  TASK-P2-009-CHECKLIST.md  TESTING-GUIDE-P2-010.md  VERCEL_DEPLOYMENT.md  deploy-to-huggingface.ps1  deploy-to-huggingface.sh
backend/: .dockerignore  .env.example  .gitignore  COMPLETE-SETUP-GUIDE.md  CONTINUATION-SESSION-2-COMPLETE.md  CONTINUATION-SESSION-COMPLETE.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEVELOPER-HANDOFF.md  Dockerfile  FINAL-SESSION-SUMMARY.md  KNOWN-ISSUES.md  MASTER-DOCUMENTATION-INDEX.md  MIGRATION-STATUS.md  PHASE-II-N-COMPLETION-REPORT.md  PROJECT-COMPLETION-SUMMARY.md  README.md  README_HF.md  SESSION-COMPLETE.md  SUPABASE_SETUP.md  TASK-GROUP-3-COMPLETE.md  TASK-GROUP-4-COMPLETE.md  TASK-GROUP-5-COMPLETE.md  TASK-GROUP-6-COMPLETE.md  TASK-GROUP-7-COMPLETE.md  TASK-GROUP-9-SUMMARY.md  TASK-P2-003-COMPLETION.md  TASK-P2-004-COMPLETION.md  TASK-P2-005-COMPLETION.md  TG10-SESSION-SUMMARY.md  TG11-SESSION-SUMMARY.md  alembic.ini  pyproject.toml  railway.json  requirements.txt  test_config.py
backend/alembic_migrations/: env.py
backend/alembic_migrations/versions/: 29f774bde39a_increase_refresh_token_column_size_to_.py  32b10e15d430_initial_schema_creation.py
backend/docs/: API_CONTRACTS.md  TASK-P2-002-SUMMARY.md
backend/migrations/: 001_create_todos_table.sql
backend/src/: config.py  main.py
backend/src/api/: __init__.py  deps.py
backend/src/models/: __init__.py  (+3 more)
backend/tests/: test_auth_deps.py  test_main.py  test_schemas.py  test_task_p2_005_verification.py
(+146 files in other folders)
